Added multi-person role names.